k8s/api-gateway/00-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: appdemo
spec:
  replicas: 1 # Empezamos con 1, luego puedes escalar
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: appdemo-images/api-gateway:v1 # (en prod: tu-usuario-docker-hub/api-gateway:latest)
        imagePullPolicy: IfNotPresent # (en prod: Always) con Always le indicamos que siempre busquea fuera
        ports:
        - containerPort: 8000
